--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
         <title>Document</title>
     </head>
-    <body>
-               
-        
-
-        <h1 id="text">Привет мир!</h1>
-
+    <body>       
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1 id="text">Привет мир!</h1>
+                </div>
+            </div>
+        </div>
 
 
 
