--- a/index.html
+++ b/index.html
@@ -11,14 +11,30 @@
 
         <title>Document</title>
     </head>
-    <body>       
+    <body class="d-flex h-100 text-center bg-dark">       
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 id="text">Привет мир!</h1>
+                    <h1 id="text">A</h1>
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
