--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
 
         <title>Document</title>
     </head>
-    <body class="d-flex h-100 text-center bg-dark">       
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h1 id="text">A</h1>
-                </div>
-            </div>
-        </div>
+    <body>       
+      <div class="header">
+        <h1>My Website</h1>
+      </div>
+
+      <div class="navbar">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+      </div>
+      <div class="row">
+        <div class="side">aaaaaaaaa</div>
+        <div class="main">AAAAAAAAA</div>
+      </div>
 
 
-
+      <div class="footer"></div>
 
 
 
