--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="" rel="icon">
+  <link href="" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,9 +23,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
@@ -36,11 +34,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
+          <li><a class="nav-link scrollto" href="#about">Про меня</a></li>
+          <li><a class="nav-link scrollto" href="#services">Что умею</a></li>
+          <li><a class="nav-link scrollto " href="#work">Работы</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Отправить сообщение</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -117,11 +115,9 @@
                     <p class="lead">
                       18 лет, безработный, учащийся МКП.
                     </p>
-                    <p class="lead">
-                      
+                    <p class="lead">                      
                     </p>
-                    <p class="lead">
-                      
+                    <p class="lead">                      
                     </p>
                   </div>
                 </div>
