--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Portfolio</a></h1>
+      <!-- <h1 class="logo"><a href="index.html">Portfolio</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo"><img src="assets/img/Слой 1.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -42,8 +42,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-    </div>
+    </div>    
   </header><!-- End Header -->
 
   <div id="hero" class="hero route bg-image"> 
@@ -55,11 +54,10 @@
               <p class="hero-subtitle"><span class="typed" data-typed-items="Хто я?, Программист"></span></p>
             </div>
           </div> 
-        </div>   <canvas id="stars"></canvas>
+        </div><canvas id="stars"></canvas>
   </div><!-- End Hero Section -->
 
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
@@ -326,8 +324,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
-    
+    </section><!-- End Portfolio Section -->    
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/1.png)">
