--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
           <li><a class="nav-link scrollto" href="#about">Про меня</a></li>
-          <li><a class="nav-link scrollto" href="#services">Что умею</a></li>
+          <li><a class="nav-link scrollto" href="#services">Навыки</a></li>
           <li><a class="nav-link scrollto " href="#work">Работы</a></li>
           <li><a class="nav-link scrollto" href="#contact">Отправить сообщение</a></li>
         </ul>
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Навыки</p>
+                    <p class="title-s">Навыки в</p>
                     <span>C++</span> <span class="pull-right">0%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -127,10 +127,10 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Что умею
+                Навыки
               </h3>
               <p class="subtitle-a">
-                Здесь описано что я умею
+                Здесь описаны мои навыки
               </p>
               <div class="line-mf"></div>
             </div>
@@ -143,9 +143,9 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">A</h2>
+                <h2 class="s-title">Навык 1</h2>
                 <p class="s-description text-center">
-                  A
+                  1
                 </p>
               </div>
             </div>
@@ -156,9 +156,9 @@
                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">A</h2>
+                <h2 class="s-title">Навык 2</h2>
                 <p class="s-description text-center">
-                  A
+                  2
                 </p>
               </div>
             </div>
@@ -169,9 +169,9 @@
                 <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">A</h2>
+                <h2 class="s-title">Навык 3</h2>
                 <p class="s-description text-center">
-                  A
+                  3
                 </p>
               </div>
             </div>
@@ -243,7 +243,7 @@
                 Портфолио
               </h3>
               <p class="subtitle-a">
-                A
+                Что я сделал
               </p>
               <div class="line-mf"></div>
             </div>
@@ -252,76 +252,28 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/111.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/111.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">A</h2>
+                    <h2 class="w-title">Сайт портфолио</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">A</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Сайт на котором вы сейчас находитесь</span> / <span class="w-date">22.06.2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
+                      <a href="#work"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">A</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">A</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">A</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">A</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          </div>          
         </div>
       </div>
     </section><!-- End Portfolio Section -->    
