--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Навыки в</p>
-                    <span>C++</span> <span class="pull-right">0%</span>
+                    <span>C++</span> <span class="pull-right">50%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>C#</span> <span class="pull-right">0%</span>
+                    <span>C#</span> <span class="pull-right">50%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python</span> <span class="pull-right">0%</span>
+                    <span>Python</span> <span class="pull-right">10%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -143,9 +143,9 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Навык 1</h2>
+                <h2 class="s-title">C++</h2>
                 <p class="s-description text-center">
-                  1
+                  Делал лабороторные в течении второго курса, 1 проект по УП, один курсач.
                 </p>
               </div>
             </div>
@@ -156,9 +156,9 @@
                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Навык 2</h2>
+                <h2 class="s-title">C#</h2>
                 <p class="s-description text-center">
-                  2
+                  Делал лабороторные в течении третьего курса, 2 проекта по УП, 1 курсач.
                 </p>
               </div>
             </div>
@@ -169,9 +169,9 @@
                 <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Навык 3</h2>
+                <h2 class="s-title">Python</h2>
                 <p class="s-description text-center">
-                  3
+                  Делал лабороторные на втором курсе.
                 </p>
               </div>
             </div>
